<resources>
    <string name="app_name">Penghitung Kalori</string>
    <string name="berat_badan">Berat badan (kg)</string>
    <string name="usia">Tahun (angka)</string>
    <string name="tinggi_badan">Tinggi badan (cm)</string>
    <string name="intro_aplikasi">Kalori adalah satuan unit kandungan panas atau energi (kamus medis Medilexicon). Secara umum, kalori dapat diartikan sebagai energi yang dibutuhkan oleh tubuh agar dapat bekerja secara optimal. Kalori bisa diperoleh dari makanan dan minuman yang kita konsumsi sehari-hari. Ayo cek berapa kalori yang dibutuhkan oleh tubuhmu</string>
    <string name="jenis_kelamin">Jenis kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hitung">Hitung</string>
    <string name="kalori_x">Kalori: %1$.2f</string>
    <string name="sedikit">Kalori Yang Dibutuhkan Tubuh Kamu Sedikit</string>
    <string name="sedang">Kalori Yang Dibutuhkan Tubuh Kamu Cukup Banyak</string>
    <string name="banyak">Wah Tubuh Kamu Memerlukan banyak Kalori</string>
    <string name="kategori_x">Saran: %1$s</string>
    <string name="berat_invalid">Berat tidak boleh kosong.</string>
    <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
    <string name="usia_invalid">Usia tidak boleh kosong.</string>
    <string name="gender_invalid">Pilih jenis kelamin</string>
    <string name="reset">Reset</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bagikan">Bagikan</string>
    <string name="about">Penghitung Kalori merupakan sebuah aplikasi Android untuk menghitung berapa kalori yang tubuh kita butuhkan agar tubuh kita bisa bekerja secara optimal.\n\nAplikasi ini dibuat oleh Rifki Rizkia</string>
    <string name="bagikan_template">Berat badan: %1$s kg\nTinggi badan: %2$s cm\nUsia: %3$s\nJenis kelamin: %4$s\nJumlah %5$s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="judul_about">Tentang Aplikasi</string>
    <string name="hasil_x">Kalori: %1$.2f - %2$s</string>
    <string name="data_x">BB: %1$.1f - TB: %2$.1f - Usia: %3$.0f - %4$s</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="saran_sedikit">Meskipun sedikit kalori dari makanan yang kamu makan tubuh kamu akan tetap bekerja secara optimal</string>
    <string name="saran_sedang">Dengan jumlah kalori yang cukup tubuh kamu akan bekerja dengan optimal makanlah makan yang berkalori cukup</string>
    <string name="saran_banyak">Wah tubuh kamu memerlukan banyak kalori agar tubuh kamu bisa bekerja secara optimal makan lah makanan yang memiliki jumlah kalori yang banyak</string>
    <string name="saran">Lihat Saran</string>
    <string name="judul_sedikit">Menjaga Kalori Yang Sedikit</string>
    <string name="judul_sedang">Menjaga Kalori Yang Sedang</string>
    <string name="judul_banyak">Menjaga Kalori Yang Banyak</string>
    <string name="nama_table">List Makanan Pokok Golongan A</string>
    <string name="makanan">List Kalori Makanan</string>
</resources>